Fix links to fit evenly on mobile screen.

--- a/page_layout.css
+++ b/page_layout.css
@@ -111,4 +111,7 @@ a {
     [class*="col-"] {
         width: 100%;
     }
+    .menu li {
+        margin-right: 25px;
+    }
 }
